# iuptest

./: .gitattributes  .gitignore  CMakeLists.txt  compile.bat  fmgr.c  fmgr.h  fmgr_win.c  fmgr_win.h  main.c
etc/: iup.rc
lib/iup/: iup.lib
